--- a/hello/setup.yml
+++ b/hello/setup.yml
@@ -7,10 +7,10 @@
 # http://www.apache.org/licenses/LICENSE-2.0
 ##############################################################################
 
-# set `testapi_url` to enable reporting to testapi
-# testapi_url: http://localhost:8000/api/v1
-project_name: qtip
-case_name: "compute"
-pod_name: "qtip-pod"
-scenario: "generic"
-version: "master"
+# Prepare connection to SUT (System Under Test)
+
+---
+- hosts: localhost
+  gather_facts: no
+  tasks:
+    - debug: "msg='please add hosts to SUT group in `hosts` file manually.'"
