--- a/workspace/group_vars/all.yml
+++ b/workspace/group_vars/all.yml
@@ -7,16 +7,16 @@
 # http://www.apache.org/licenses/LICENSE-2.0
 ##############################################################################
 
-qtip_resources: "/home/akhil/project/qtip/qtip/cli/../../resources"
+qtip_resources: "../../../resources"
 qtip_results: results
 qtip_fixtures: fixtures
 qtip_dump: dump
 qtip_cache: ".qtip-cache"
-qtip_workdir: "{{ ansible_env.HOME }}/qtip-workdir-20170524-1924"
+qtip_workdir: "{{ ansible_env.HOME }}/qtip-workdir-20170525-1342"
 installer_master_group:
   manual: dummy-group
   fuel: fuel-masters
   apex: apex-underclouds
 
 installer: "fuel"
-installer_master_host: "master"
+installer_master_host: "fuel-master"
