--- a/host_vars/localhost.yml
+++ b/host_vars/localhost.yml
@@ -11,6 +11,6 @@
 # testapi_url: http://localhost:8000/api/v1
 project_name: qtip
 case_name: "compute"
-pod_name: "qtip-pod"
-scenario: "generic"
+pod_name: "zte-pod1"
+scenario: "os-nosdn-nofeature-ha"
 version: "master"
