--- a/host_vars/localhost.yml
+++ b/host_vars/localhost.yml
@@ -11,6 +11,6 @@
 # testapi_url: http://localhost:8000/api/v1
 project_name: qtip
 case_name: "compute"
-pod_name: "zte"
+pod_name: "zte-pod"
 scenario: "unknown"
 version: "master"
